Added team images and partner carousel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Change Title and Meta tags-->
     <title>MetaEfi Platform | Home</title>
     <meta name="description"
-          content="Eclipse Ico | responsive app landing page, This is a premium product available exclusively here : https://themeforest.net/user/perletheme">
+          content="MetaEfi Platform">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Perle Template">
 
@@ -105,8 +105,7 @@
                 <div class="header-title">
                     <h1 class="textillate text-white" data-loop="true" data-aos="fade-up" data-aos-delay="300">
                     <span class="textillate-text">
-                        <span data-in-effect="fadeIn" data-out-effect="fadeOut">Empower traditional industries towards Web 3.0</span>
-                        <span data-in-effect="fadeIn" data-out-effect="fadeOut">with diversity, liquidity and sustainability</span>
+                        <span data-in-effect="fadeIn" data-out-effect="fadeOut">Empower traditional industries towards Web 3.0 with diversity, liquidity and sustainability</span>
                         <span data-in-effect="fadeIn" data-out-effect="fadeOut">The future of DeFi</span>
                         <span data-in-effect="fadeIn" data-out-effect="fadeOut">Starts from here</span>
                     </span>
@@ -114,14 +113,14 @@
                 </div>
                 <div class="header-sub">
                     <div class="btn hoverable bg-white waves-effect waves-button hover-up">
-                        <a class="text-transparent main-gradient-bg" href="">Whitepaper (coming soon)</a>
+                        <a class="text-transparent main-gradient-bg" href="./files/MetaEfi_Whitepaper_v3.pdf">Whitepaper (coming soon)</a>
                     </div>
                     <div class="btn hoverable main-gradient-bg waves-effect waves-button hover-up">
                         <a href="">Join Discord</a>
                     </div>
                 </div>
                 <div class="social-icons vertical-social-icons">
-                    <a href="#" data-aos="fade-up" data-aos-delay="100"><i class="fas fa-rss"></i></a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="100"><i class="fas fa-twitter"></i></a>
                     <a href="#" data-aos="fade-up" data-aos-delay="120"><i class="fab fa-discord"></i></a>
                     <a href="#" data-aos="fade-up" data-aos-delay="140"><i class="fab fa-telegram"></i></a>
                 </div>
@@ -139,33 +138,39 @@
                 <p>We acknowledge their ongoing support & valuable assistance.</p>
             </div>
             <div class="col-12 col-md-6 count-down">
-                <div class="count-down-wrapper main-dark-background-2">
-                    <div id="clockdiv">
-                        <div>
-                            <div class="smalltext">days</div>
-                            <span class="days"></span></div>
-                        <div>
-                            <div class="smalltext">hours</div>
-                            <span class="hours"></span></div>
-                        <div>
-                            <div class="smalltext">minutes</div>
-                            <span class="minutes"></span></div>
-                        <div>
-                            <div class="smalltext">seconds</div>
-                            <span class="seconds"></span></div>
+                <div class="owl-carousel owl-companies">
+                    <div>
+                        <img class="img-fluid" src="./images/partners/rrr-construction.png" alt="Company Image">
                     </div>
-                    <div class="count-down-progress">
-                        <div class="progress main-dark-background">
-                            <span></span>
-                        </div>
-                        <div class="small">
-                            <span>25 $</span>
-                            <span>78 $</span>
-                            <span>825 $</span>
-                        </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/h&w-building-service.png" alt="Company Image">
                     </div>
-                    <div class="btn hoverable main-gradient-bg waves-effect waves-button">
-                        <a href="">Get 40% Today</a>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/win-capital.jpeg" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/k11-labs.jpeg" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/lavish.png" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/new-plus-homes.jpeg" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/panda-capital.png" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/greenland.png" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/dentown.png" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/castle-island.png" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/verona-homes.png" alt="Company Image">
                     </div>
                 </div>
             </div>
@@ -185,10 +190,7 @@
                     <p>MetaEfi is building a decentralized financial protocol that brings diversity, sustainability and
                         liquidity for crypto investments, to facilitate the integration of the crypto economy and
                         real economy for the future world.</p>
-                    <a href="" class="more"><span></span>see more</a>
-                    <div class="image">
-                        <img src="./images/icons/about-dark4.png" alt="">
-                    </div>
+                    <a href="./files/MetaEfi_Whitepaper_v3.pdf" class="more"><span></span>see more</a>
                 </div>
                 <div class="col-12 col-lg-6 right-side-content">
                     <div class="about-cards-container">
@@ -198,7 +200,7 @@
                                 <h4>NFT</h4>
                                 <p>Our utility NFT is embedded with passive incomes and privileges,
                                     it also can be used as collateral to borrow crypto assets.</p>
-                                <a href="" class="more main-dark-background">read more</a>
+                                <a href="./files/MetaEfi_Whitepaper_v3.pdf" class="more main-dark-background">read more</a>
                             </div>
                         </div>
                         <div class="single-card" data-aos="fade-up" data-aos-delay="200">
@@ -207,7 +209,7 @@
                                 <h4>DAO</h4>
                                 <p>MetaEfi DAO will be created as the protocol launch, which allows token holders
                                     to participate in the decision making and management process progressively.</p>
-                                <a href="" class="more main-dark-background">read more</a>
+                                <a href="./files/MetaEfi_Whitepaper_v3.pdf" class="more main-dark-background">read more</a>
                             </div>
                         </div>
                         <div class="single-card" data-aos="fade-up" data-aos-delay="300">
@@ -216,7 +218,7 @@
                                 <h4>$MEF</h4>
                                 <p>MEF is the native token of MetaEfi, 1 MEF is supported by 1 Dai and its value
                                     is backed by the crypto asset portfolio in the reserve asset pool.</p>
-                                <a href="" class="more main-dark-background">read more</a>
+                                <a href="./files/MetaEfi_Whitepaper_v3.pdf" class="more main-dark-background">read more</a>
                             </div>
                         </div>
                         <div class="single-card" data-aos="fade-up" data-aos-delay="400">
@@ -226,7 +228,7 @@
                                 <p>NFT holders can create synthetic assets by collateralizing NFTs
                                     to borrow crypto assets. Meanwhile, users will be incentivized
                                     by MetaEfi's governance token.</p>
-                                <a href="" class="more main-dark-background">read more</a>
+                                <a href="./files/MetaEfi_Whitepaper_v3.pdf" class="more main-dark-background">read more</a>
                             </div>
                         </div>
                     </div>
@@ -318,7 +320,7 @@
             </div>
             <div class="more-link">
                 <div class="main-gradient-bg hoverable waves-effect waves-button hover-up">
-                    <a href="" class="more">see more</a>
+                    <a href="./files/MetaEfi_Whitepaper_v3.pdf" class="more">see more</a>
                 </div>
             </div>
         </div>
@@ -345,7 +347,7 @@
                                 <p>Finance and accounting</p>
                                 <p class="description">Vivienne entered into NFT world in 2020.
                                     She is responsible for tokenomics design, whitepaper planning, and business strategies.</p>
-                                <img src="./images/team/alexander-kustov-725253-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/vivienne.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -361,7 +363,7 @@
                                 <p>Partner of Dentown Investment</p>
                                 <p class="description">Charlie has 12 years of experience in the real estate industry.
                                     He has great insight in choosing land and industry categories.</p>
-                                <img src="./images/team/angel-jimenez-168185-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/charlie.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -377,7 +379,7 @@
                                 <p>Entrepreneur and Concert pianist</p>
                                 <p class="description">Zhiyang entered into NFT world in 2020. He is responsible
                                     for collaboration, community building and growth.</p>
-                                <img src="./images/team/paulette-wooten-223048-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/zhiyang.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -393,7 +395,7 @@
                                 <p>VC and Mutual Fund accountant</p>
                                 <p class="description">Angelina is the advisor of Panda Capital and Win capital.
                                     Currently she focuses on Gamefi and NFT.</p>
-                                <img src="./images/team/paulette-wooten-223048-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/angelina.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -409,7 +411,7 @@
                                 <p>OG on the crypto market</p>
                                 <p class="description">Sergey joins the crypto industry in 2016. He was one of the core devs the Waves team.
                                     Former CTO of crypto startup Incent</p>
-                                <img src="./images/team/alexander-kustov-725253-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/sergey.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -425,7 +427,7 @@
                                 <p>Tech and Smart contract</p>
                                 <p class="description">Experienced Australia Tech Lead, ex-Deloitte.
                                     He is responsible for coding smart contracts and developing dApps.</p>
-                                <img src="./images/team/alexander-kustov-725253-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/nicholas.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -443,7 +445,7 @@
                                     and New South Wales. Extensive experience in corporate M&A financing,
                                     business valuation investment.
                                     He is also a cryptocurrency and NFT player.</p>
-                                <img src="./images/team/alexander-kustov-725253-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/andrew.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
@@ -459,7 +461,7 @@
                                 <p>Investor and serial entrepreneur</p>
                                 <p class="description">Xinxin is a serial entrepreneur, who invested in
                                     Japan's animation and AV industry, and is an OG in the crypto world.</p>
-                                <img src="./images/team/alexander-kustov-725253-unsplash@2x.png" alt="team image">
+                                <img src="./images/team/xinxin.jpeg" alt="team image">
                                 <p>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </p>
