Updated website logos, partner images and team portraits

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!--Nav Logo-->
                 <div class="small-screens-logo nav-logo d-block d-sm-block d-lg-none">
                     <a class="navbar-brand" data-scroll-nav="1" href="#">
-                        <img class="img-fluid" src="./images/svg/site-logo.svg" alt="Website Logo">
+                        <img class="img-fluid" src="./images/icons/site-logo-241x256.png" alt="Website Logo">
                     </a>
                 </div>
                 <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -61,7 +61,7 @@
                     <!--Nav Logo on small screens Only-->
                     <div class="small-screens-logo nav-logo d-block d-sm-block d-lg-none">
                         <a class="navbar-brand" data-scroll-nav="1" href="#">
-                            <img class="img-fluid" src="./images/svg/site-logo.svg" alt="Website Logo">
+                            <img class="img-fluid" src="./images/icons/site-logo-241x256.png" alt="Website Logo">
                         </a>
                     </div>
                     <ul class="navbar-nav mr-auto">
@@ -81,7 +81,7 @@
                     <!--Nav Logo on Big Screens Only-->
                     <div class="nav-logo d-none d-lg-block">
                         <a class="navbar-brand" data-scroll-nav="1" href="#">
-                            <img class="img-fluid" src="./images/svg/site-logo.svg" alt="Website Logo">
+                            <img class="img-fluid" src="./images/icons/site-logo-241x256.png" alt="Website Logo">
                         </a>
                     </div>
                     <!--Subscribe Button-->
@@ -120,9 +120,9 @@
                     </div>
                 </div>
                 <div class="social-icons vertical-social-icons">
-                    <a href="#" data-aos="fade-up" data-aos-delay="100"><i class="fas fa-twitter"></i></a>
-                    <a href="#" data-aos="fade-up" data-aos-delay="120"><i class="fab fa-discord"></i></a>
-                    <a href="#" data-aos="fade-up" data-aos-delay="140"><i class="fab fa-telegram"></i></a>
+                    <a href="https://twitter.com/MetaEfi_io" data-aos="fade-up" data-aos-delay="100"><i class="fas fa-twitter"></i></a>
+                    <a href="https://discord.gg/6TTEXF78KF" data-aos="fade-up" data-aos-delay="120"><i class="fab fa-discord"></i></a>
+                    <a href="https://t.me/+NFapGZQnCLs3Y2E1" data-aos="fade-up" data-aos-delay="140"><i class="fab fa-telegram"></i></a>
                 </div>
             </div>
         </div>
@@ -140,7 +140,10 @@
             <div class="col-12 col-md-6 count-down">
                 <div class="owl-carousel owl-companies">
                     <div>
-                        <img class="img-fluid" src="./images/partners/rrr-construction.png" alt="Company Image">
+                        <img class="img-fluid" src="./images/partners/panda-capital.png" alt="Company Image">
+                    </div>
+                    <div>
+                        <img class="img-fluid" src="./images/partners/rrr-construction.jpeg" alt="Company Image">
                     </div>
                     <div>
                         <img class="img-fluid" src="./images/partners/h&w-building-service.png" alt="Company Image">
@@ -149,20 +152,19 @@
                         <img class="img-fluid" src="./images/partners/win-capital.jpeg" alt="Company Image">
                     </div>
                     <div>
-                        <img class="img-fluid" src="./images/partners/k11-labs.jpeg" alt="Company Image">
+                        <img class="img-fluid" src="./images/partners/k11-labs.png" alt="Company Image">
                     </div>
                     <div>
                         <img class="img-fluid" src="./images/partners/lavish.png" alt="Company Image">
                     </div>
                     <div>
-                        <img class="img-fluid" src="./images/partners/new-plus-homes.jpeg" alt="Company Image">
+                        <img class="img-fluid" src="./images/partners/new-plus-homes.png" alt="Company Image">
                     </div>
-                    <div>
-                        <img class="img-fluid" src="./images/partners/panda-capital.png" alt="Company Image">
-                    </div>
-                    <div>
+                    <!-- temporarily removed
+                     <div>
                         <img class="img-fluid" src="./images/partners/greenland.png" alt="Company Image">
                     </div>
+                    -->
                     <div>
                         <img class="img-fluid" src="./images/partners/dentown.png" alt="Company Image">
                     </div>
@@ -349,7 +351,7 @@
                                     She is responsible for tokenomics design, whitepaper planning, and business strategies.</p>
                                 <img src="./images/team/vivienne.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/wenwei_su" target="_blank"><i class="fab fa-twitter"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -365,7 +367,7 @@
                                     He has great insight in choosing land and industry categories.</p>
                                 <img src="./images/team/charlie.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/CHARLIE8CHEN" target="_blank"><i class="fab fa-twitter"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -381,7 +383,7 @@
                                     for collaboration, community building and growth.</p>
                                 <img src="./images/team/zhiyang.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/zhiyangxyz" target="_blank"><i class="fab fa-twitter"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -393,11 +395,11 @@
                                     <span></span>
                                 </div>
                                 <p>VC and Mutual Fund accountant</p>
-                                <p class="description">Angelina is the advisor of Panda Capital and Win capital.
-                                    Currently she focuses on Gamefi and NFT.</p>
+                                <p class="description">Angelina is VP at Miracle Project, involved with blockchain technology
+                                    and Digital Assets since January 2018. Currently she focuses on Gamefi and NFT.</p>
                                 <img src="./images/team/angelina.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/Angelin19736384" target="_blank"><i class="fab fa-twitter"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -413,23 +415,7 @@
                                     Former CTO of crypto startup Incent</p>
                                 <img src="./images/team/sergey.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-xl-4 col-l-6 col-md-6 single-team-container">
-                            <div class="team-container-sub hoverable main-dark-background-2" data-aos="fade-up" data-aos-delay="180">
-                                <h4>Nicholas Qi</h4>
-                                <div class="job-container">
-                                    <p class="job-title main-gradient-bg text-transparent">Head Developer</p>
-                                    <span></span>
-                                </div>
-                                <p>Tech and Smart contract</p>
-                                <p class="description">Experienced Australia Tech Lead, ex-Deloitte.
-                                    He is responsible for coding smart contracts and developing dApps.</p>
-                                <img src="./images/team/nicholas.jpeg" alt="team image">
-                                <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.linkedin.com/in/sergeyishchenko" target="_blank"><i class="fab fa-linkedin"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -447,7 +433,7 @@
                                     He is also a cryptocurrency and NFT player.</p>
                                 <img src="./images/team/andrew.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.tahota.com/Sydney/EN/05/87f8ae1dc3a71af3.aspx" target="_blank"><i class="far fa-bookmark"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -463,7 +449,7 @@
                                     Japan's animation and AV industry, and is an OG in the crypto world.</p>
                                 <img src="./images/team/xinxin.jpeg" alt="team image">
                                 <p>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/lvxinxin" target="_blank"><i class="fab fa-twitter"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -532,11 +518,11 @@
     <!-- Start Footer Section-->
     <div class="main-footer">
         <div class="content">
-            <img class="img-fluid" src="./images/icons/big-logo-light.png" alt="site-logo">
+            <img class="img-fluid" src="./images/icons/site-logo-241x256.png" alt="site-logo">
             <p>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-discord"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="https://twitter.com/MetaEfi_io"><i class="fab fa-twitter"></i></a>
+                <a href="https://discord.gg/6TTEXF78KF"><i class="fab fa-discord"></i></a>
+                <a href="https://t.me/+NFapGZQnCLs3Y2E1"><i class="fab fa-telegram"></i></a>
             </p>
         </div>
     </div>
