Updated latest new section

--- a/index.html
+++ b/index.html
@@ -473,17 +473,16 @@
                         <div class="col-12 col-lg-6 single-news-container" data-aos="fade-up" data-aos-delay="100">
                             <div class="news-container-sub hoverable blue-light-background">
                                 <div class="news-image"
-                                     style="background: url('./images/news/news1.png') no-repeat center center;"></div>
+                                     style="background: url('./images/news/boomgala.png') no-repeat center center;"></div>
                                 <div class="news-content">
-                                    <h6>Modern, clean and gradient ico most trending template</h6>
+                                    <h6>MetaEfi 🤝 BOOMGALA</h6>
                                     <p class="news-details">
-                                        <a class="text-transparent main-gradient-bg" href="">by John Doe</a>
-                                        <a class="text-transparent main-gradient-bg" href="">latest news</a>
-                                        <a class="text-transparent main-gradient-bg" href="">12.08.2018</a>
+                                        <a class="text-transparent main-gradient-bg" href="#">by Zhiyang Ou</a>
+                                        <a class="text-transparent main-gradient-bg" href="#">22.04.2022</a>
                                     </p>
                                     <div class="more-content">
                                         <div class="more-link main-gradient-bg hoverable waves-effect waves-button">
-                                            <a href="">see more</a>
+                                            <a href="https://medium.com/metaefi/metaefi-boomgala-8fff465461c9">see more</a>
                                         </div>
                                     </div>
                                 </div>
@@ -492,17 +491,16 @@
                         <div class="col-12 col-lg-6 single-news-container" data-aos="fade-up" data-aos-delay="120">
                             <div class="news-container-sub hoverable blue-light-background">
                                 <div class="news-image"
-                                     style="background: url('./images/news/news2.png') no-repeat center center;"></div>
+                                     style="background: url('./images/news/lessons.png') no-repeat center center;"></div>
                                 <div class="news-content">
-                                    <h6>Modern, clean and gradient ico most trending template</h6>
+                                    <h6>The lessons I learned on building a Web 3.0 community</h6>
                                     <p class="news-details">
-                                        <a class="text-transparent main-gradient-bg" href="">by John Doe</a>
-                                        <a class="text-transparent main-gradient-bg" href="">latest news</a>
-                                        <a class="text-transparent main-gradient-bg" href="">12.08.2018</a>
+                                        <a class="text-transparent main-gradient-bg" href="#">by Zhiyang Ou</a>
+                                        <a class="text-transparent main-gradient-bg" href="#">21.04.2022</a>
                                     </p>
                                     <div class="more-content">
                                         <div class="more-link main-gradient-bg hoverable waves-effect waves-button">
-                                            <a href="">see more</a>
+                                            <a href="https://medium.com/metaefi/the-lessons-i-learned-on-building-a-web-3-0-community-d449c3656d23">see more</a>
                                         </div>
                                     </div>
                                 </div>
