Updated the links

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                     </div>
                     <!--Subscribe Button-->
                     <div class="nav-buttons">
-                        <button id="navbar-subscribe-btn" type="button" data-toggle="modal"
-                                class="btn hoverable main-gradient-bg waves-effect waves-button">
-                            Connect wallet
-                        </button>
+                        <!-- temporarily disabled
+                            <button id="navbar-subscribe-btn" type="button" data-toggle="modal"
+                                    class="btn hoverable main-gradient-bg waves-effect waves-button">
+                                Connect wallet
+                            </button>
+                        -->
                     </div>
                 </div>
             </div>
@@ -116,11 +118,11 @@
                         <a class="text-transparent main-gradient-bg" href="./files/MetaEfi_Whitepaper_v3.pdf">Whitepaper (coming soon)</a>
                     </div>
                     <div class="btn hoverable main-gradient-bg waves-effect waves-button hover-up">
-                        <a href="">Join Discord</a>
+                        <a href="https://discord.gg/6TTEXF78KF">Join Discord</a>
                     </div>
                 </div>
                 <div class="social-icons vertical-social-icons">
-                    <a href="https://twitter.com/MetaEfi_io" data-aos="fade-up" data-aos-delay="100"><i class="fas fa-twitter"></i></a>
+                    <a href="https://twitter.com/MetaEfi_io" data-aos="fade-up" data-aos-delay="100"><i class="fab fa-twitter"></i></a>
                     <a href="https://discord.gg/6TTEXF78KF" data-aos="fade-up" data-aos-delay="120"><i class="fab fa-discord"></i></a>
                     <a href="https://t.me/+NFapGZQnCLs3Y2E1" data-aos="fade-up" data-aos-delay="140"><i class="fab fa-telegram"></i></a>
                 </div>
